# langgraph-researcher

./: .env.example  .gitignore  4-research-assistant.ipynb  README.md  langgraph.json  pipeline-pic.excalidraw  pyproject.toml  report.md
research_pipeline/: __init__.py  __main__.py  chains.py  driver.py  graph.py  llm.py  nodes.py  observability.py  prompts.py  schemas.py  state.py
tests/: README.md  conftest.py  test_chains.py  test_nodes.py  test_schemas.py
