[project]
name = "langgraph-researcher"
version = "0.1.0"
description = "Multi-analyst LangGraph research pipeline."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint>=2.0",
    "langchain-anthropic>=0.2",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "langchain-tavily>=0.1",
    "wikipedia>=1.4",
    "pydantic>=2.7",
]

[project.optional-dependencies]
cli = ["langgraph-cli[inmem]>=0.1"]

[project.scripts]
langgraph-researcher = "research_pipeline.driver:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["research_pipeline*"]
exclude = ["tests*"]
